--- a/roles/jvm/tasks/main.yml
+++ b/roles/jvm/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
-- name: Install {{ role_name }} dependencies
-  apt:
-    package: "{{ sdkman_dependencies }}"
+- name: Install {{ role_name }} utilities repository
+  include_tasks: "{{ ansible_os_family | lower }}.yml"
+
 
 - name: Download {{ role_name }} SDK manager installer script
   get_url:
